force-app/main/default/objects/Coupon_Code__c/Coupon_Code__c.object-meta.xml
<CustomObject>
    <description>Stores coupon codes and their discount information for bookings</description>
    <label>Coupon Code</label>
    <nameField>
        <label>Coupon Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupon Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>