force-app/main/default/objects/Coupon_Code__c/fields/Current_Uses_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Uses_Count__c</fullName>
    <label>Current Uses Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>