force-app/main/default/objects/Coupon_Code__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>today() &lt;=  Expiration_Date__c &amp;&amp;  ISPICKVAL(Approval_Status__c,&quot;Approved&quot;) &amp;&amp;  Current_Uses_Count__c &lt; Max_Uses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>