force-app/main/default/objects/Coupon_Code__c/fields/Max_Uses__c.field-meta.xml
<CustomField>
    <fullName>Max_Uses__c</fullName>
    <label>Maximum Uses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>