force-app/main/default/objects/Coupon_Code__c/validationRules/Check_Expiration_Date_for_Coupon.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Expiration_Date_for_Coupon</fullName>
    <active>true</active>
    <errorConditionFormula>(isnew() &amp;&amp;  Expiration_Date__c &lt;  TODAY()) 
|| (ischanged(Expiration_Date__c) &amp;&amp; Expiration_Date__c &lt;  TODAY())</errorConditionFormula>
    <errorMessage>Coupon code cannot be created with an expired date</errorMessage>
</ValidationRule>