force-app/main/default/objects/Coupon_Code__c/validationRules/Check_Maximum_Discount_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Maximum_Discount_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_Percentage__c &gt;  value($CustomMetadata.System_Thresholds__mdt.Max_Coupon_Code_Discount.Value__c)/100</errorConditionFormula>
    <errorDisplayField>Discount_Percentage__c</errorDisplayField>
    <errorMessage>Discount exceeds the allowed system limit</errorMessage>
</ValidationRule>