force-app/main/default/objects/Coupon_Code__c/listViews/Coupon_Code_Approvers_Coupon_Code.listView-meta.xml
<ListView>
    <fullName>Coupon_Code_Approvers_Coupon_Code</fullName>
    <filterScope>Queue</filterScope>
    <label>Coupon Code Approvers</label>
    <queue>Coupon_Code_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>